# ComfyUI-NuA-BIRD

./: README.md  __init__.py  bird_deblurring.py  bird_denoising.py  bird_inpainting.py  bird_loader.py  bird_non_uniform_deblurring.py  bird_super_resolution.py  pyproject.toml  requirements.txt
birdlib/: api.py  utils.py
examples/: deblurring non uniform.json  deblurring.json  denoising.json  inpainting.json  super_resolution.json
