[project]
name = "comfyui-nua-bird"
description = "ComfyUI implementation of '[a/Blind Image Restoration via Fast Diffusion Inversion](https://github.com/hamadichihaoui/BIRD)' Original [a/article](https://arxiv.org/abs/2405.19572)"
version = "1.0.0"
license = "LICENSE"
dependencies = ["numpy", "torch", "torchvision", "blobfile", "tqdm", "pyYaml", "pillow", "diffusers"]

[project.urls]
Repository = "https://github.com/nuanarchy/ComfyUI-NuA-BIRD"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-NuA-BIRD"
Icon = ""
